--- a/Chap4.ipynb
+++ b/Chap4.ipynb
@@ -303,6 +303,255 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Chap.4 numpy套件(numeric python)\n",
+        "## 為什麼需要numpy?\n",
+        "* numpy由c撰寫，速度快python 10~1000倍以上\n",
+        "* numpy儲存結果較正確，python數字儲存不正確\n",
+        "* numpy節省記憶體儲存空間\n",
+        "* numpy的向量(矩陣計算)速度快\n",
+        "* numpy的取值方便"
+      ],
+      "metadata": {
+        "id": "UEiZWEsETN3f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_list=[1,2,3,4,5]\n",
+        "print(a_list*3) #重複3次"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GocLG-IMT0k_",
+        "outputId": "aab5a918-5e43-4006-ab7a-9e6322982178"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#numpy套件的ndarray型態,提供element-wise的操作\n",
+        "import numpy as np\n",
+        "a=np.array([1,2,3,4,5])\n",
+        "print(a*3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_xNkl0pIT9uv",
+        "outputId": "0fd970e1-4caf-4980-c88b-193cb834a9ca"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 3  6  9 12 15]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([1,2,3,4,5])\n",
+        "print(type(a))\n",
+        "print(a.shape) #ndaary的形狀\n",
+        "print(a.dtype) #資料的型態\n",
+        "print(a.ndim) #維度"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ezt8MuEkUEwt",
+        "outputId": "a80fc959-b57e-4b46-ce45-5c45090c658f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.ndarray'>\n",
+            "(5,)\n",
+            "int64\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "z=np.zeros(6)\n",
+        "print(z)\n",
+        "z=np.zeros((2,3,4))\n",
+        "print(z)\n",
+        "print(np.arange(10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qah89tqeSZU9",
+        "outputId": "2b72da6e-1bea-4924-b58c-62689e7ac95c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0. 0. 0. 0. 0. 0.]\n",
+            "[[[0. 0. 0. 0.]\n",
+            "  [0. 0. 0. 0.]\n",
+            "  [0. 0. 0. 0.]]\n",
+            "\n",
+            " [[0. 0. 0. 0.]\n",
+            "  [0. 0. 0. 0.]\n",
+            "  [0. 0. 0. 0.]]]\n",
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ndarray的進階操作"
+      ],
+      "metadata": {
+        "id": "03p-funeUIA8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_array=np.arange(10) #除了10 從0開始\n",
+        "print(my_array)\n",
+        "print(my_array[0])\n",
+        "print(my_array[0:5]) #除了5 從0開始"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRLfolObUMAF",
+        "outputId": "855bdc0c-e876-4f61-8c5d-b92ec63dd088"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "0\n",
+            "[0 1 2 3 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2維資料取值"
+      ],
+      "metadata": {
+        "id": "zA6eAihhUUoX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_2d_array=np.array([np.arange(0,5),np.arange(5,10)])\n",
+        "print(my_2d_array)\n",
+        "print(my_2d_array[1,:]) #取第一維的資料\n",
+        "print(my_2d_array[:,1]) #取所有維度中，第一位置的資料\n",
+        "print(my_2d_array[1,1]) #顯示2維資料的取值，都是從0開始"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u9kApB4GUWU1",
+        "outputId": "46335333-c3aa-434b-d5bd-693c25257d16"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]]\n",
+            "[5 6 7 8 9]\n",
+            "[1 6]\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_array=np.arange(0,10) #除了10以外 從0開始\n",
+        "print(my_array) #結果是10結果是10\n",
+        "print(my_array.shape)\n",
+        "my_2d_array=my_array.reshape(2,5)\n",
+        "print(my_2d_array)\n",
+        "print((np.arange(0,100).reshape(10,10))) #10行10列"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D-6CGxVaUgMj",
+        "outputId": "eb111ec9-0240-449e-ca78-e356d822e93e"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "(10,)\n",
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]]\n",
+            "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+            " [10 11 12 13 14 15 16 17 18 19]\n",
+            " [20 21 22 23 24 25 26 27 28 29]\n",
+            " [30 31 32 33 34 35 36 37 38 39]\n",
+            " [40 41 42 43 44 45 46 47 48 49]\n",
+            " [50 51 52 53 54 55 56 57 58 59]\n",
+            " [60 61 62 63 64 65 66 67 68 69]\n",
+            " [70 71 72 73 74 75 76 77 78 79]\n",
+            " [80 81 82 83 84 85 86 87 88 89]\n",
+            " [90 91 92 93 94 95 96 97 98 99]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
