--- a/Chap7.ipynb
+++ b/Chap7.ipynb
@@ -70,7 +70,7 @@
         "try:\n",
         "  a=5\n",
         "  b=10\n",
-        "  if a<b:\n",
+        "  if a<b: #檢視以下查詢，看哪裡有問題\n",
         "    print(n)\n",
         "except NameError:\n",
         "  print(\"名稱錯誤\")\n",
@@ -81,7 +81,7 @@
         "else:\n",
         "  print(\"程式正確沒有錯誤\")\n",
         "finally:\n",
-        "  print(\"程式結束\")"
+        "  print(\"程式結束\") #做完後，顯示程式結束"
       ],
       "metadata": {
         "colab": {
